objects/DependentPartRelationship__c.object
<CustomObject>
    <description>Stores the relationships for part dependency when quoting.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Parts__c</fullName>
        <description>Dependent Parts that are added to a quote when an independent part is added.</description>
        <inlineHelpText>Dependent Parts that are added to a quote when an independent part is added.</inlineHelpText>
        <label>Dependent Parts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Independent_Part__c</fullName>
        <description>Independent Part that triggers adding the dependent parts.</description>
        <inlineHelpText>Independent Part that triggers adding the dependent parts.</inlineHelpText>
        <label>Independent Part</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Dependent Part Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependent Part Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>